--- a/new_payroll_form.html
+++ b/new_payroll_form.html
@@ -25,6 +25,33 @@
                 <label class="label text" for="name">Name</label>
                 <input class="input" type="text" id="name" name="name" placeholder="Enter Your name " required>
             </div>
+            <div class="row-content">
+                <label class="label text"for="profile">Profile image </label>
+                <div class="profile-radio-content">
+                    <label>
+                        <input type="radio" name="profile" id="profile1" value="../EmployeePayrollHTML/img/img1.png" required>
+                        <img class="profile" id="image1" src="../EmployeePayrollHTML/img/img1.png" width="50%" height="40px">
+                    </label>
+                </div>
+                <div class="profile-radio-content">
+                    <label>
+                        <input type="radio" name="profile" id="profile1" value="../EmployeePayrollHTML/img/img1.png" required>
+                        <img class="profile" id="image1" src="../EmployeePayrollHTML/img/img2.png" width="50%" height="40px">
+                    </label>
+                </div>
+                <div class="profile-radio-content">
+                    <label>
+                        <input type="radio" name="profile" id="profile1" value="../EmployeePayrollHTML/img/img1.png" required>
+                        <img class="profile" id="image1" src="../EmployeePayrollHTML/img/img3.jpg" width="50%" height="40px">
+                    </label>
+                </div>
+                <div class="profile-radio-content">
+                    <label>
+                        <input type="radio" name="profile" id="profile1" value="../EmployeePayrollHTML/img/img1.png" required>
+                        <img class="profile" id="image1" src="../EmployeePayrollHTML/img/img4.jpg" width="50%" height="40px">
+                    </label>
+                </div>
+            </div>
         </form>
 
     </div>
