--- a/new_payroll_form.html
+++ b/new_payroll_form.html
@@ -35,19 +35,19 @@
                 </div>
                 <div class="profile-radio-content">
                     <label>
-                        <input type="radio" name="profile" id="profile1" value="../EmployeePayrollHTML/img/img1.png" required>
+                        <input type="radio" name="profile" id="profile1" value="../EmployeePayrollHTML/img/img2.png" required>
                         <img class="profile" id="image1" src="../EmployeePayrollHTML/img/img2.png" width="50%" height="40px">
                     </label>
                 </div>
                 <div class="profile-radio-content">
                     <label>
-                        <input type="radio" name="profile" id="profile1" value="../EmployeePayrollHTML/img/img1.png" required>
+                        <input type="radio" name="profile" id="profile1" value="../EmployeePayrollHTML/img/img3.jpg" required>
                         <img class="profile" id="image1" src="../EmployeePayrollHTML/img/img3.jpg" width="50%" height="40px">
                     </label>
                 </div>
                 <div class="profile-radio-content">
                     <label>
-                        <input type="radio" name="profile" id="profile1" value="../EmployeePayrollHTML/img/img1.png" required>
+                        <input type="radio" name="profile" id="profile1" value="../EmployeePayrollHTML/img/img4.jpg" required>
                         <img class="profile" id="image1" src="../EmployeePayrollHTML/img/img4.jpg" width="50%" height="40px">
                     </label>
                 </div>
