--- a/new_payroll_form.html
+++ b/new_payroll_form.html
@@ -138,11 +138,22 @@
                     <option value="2020">2020</option>   
                     <option value="2019">2019</option>   
                     <option value="2018">2018</option>   
-
-
                 </select>
                 </div>
             </div>
+            <div class="row-content">
+                <label class="label text" for="notes">Notes</label>
+                <textarea class = "input" name="Notes" id="notes"placeholder="" style="height: 100px;"></textarea>
+            </div>
+            <div class="buttonParent">
+                <a href="../EmployeePayrollHTML/home.html" class="resetButton button cancelButton">Cancel</a>
+                <div class="submit-reset">
+                    <button type="submit" class="button submitButton" id="submitButton">Submit</button>
+                    <button type="reset" class="resetButton">Reset</button>
+                </div>
+            </div>
+            
+
         </form>
         
     </div>
